<resources>
    <string name="app_name">Chat App</string>
    <string name="insert">Insert your message</string>

    <!-- HomeFragment -->
    <string name="connect">Connect to a chat</string>
    <string name="host">Host a chat</string>

    <!-- FragmentClientConnect -->
    <string name="username_hint">Username</string>
    <string name="server_address_hint">Server Address</string>
    <string name="join_chat">Join Chat</string>
    <string name="username_missing">Please insert your username</string>
    <string name="invalid_ip">Please provide a valid IP Address</string>
    <string name="ip_missing">Please provide the IP Address</string>
    <string name="ip_example">192.168.x.104</string>
    <string name="port">Port</string>
    <string name="connect_error">IP Address doesn\'t have a chat server</string>

    <!-- FragmentServerConnect -->
    <string name="admin">Admin</string>
    <string name="password">Password</string>
    <string name="use_password">Use password</string>
    <string name="no_password">No password</string>
    <string name="your_ip">Your IP Address is:</string>
    <string name="create_and_join">Create and Join</string>
    <string name="create_server">Only create</string>
    <string name="stop_server">Stop Server</string>
    <string name="password_missing">Please insert a password</string>
    <string name="waiting_for_a_connection">Waiting for a connection</string>
    <string name="server_error">Unexpected error, couldn\'t create server</string>
    <string name="port_in_use_error">The default port is already been hosted by other server.</string>

    <!-- FragmentChat -->
    <string name="insert_message">Insert your message…</string>
    <string name="snack_server_disconnect">Connection lost</string>
    <string name="notification_new_message">New Message</string>

    <!-- AcceptedStatus -->
    <string name="wrong_password">Wrong password</string>
    <string name="security_kick">Please, don\'t try to fool the server</string>
    <string name="admin_kick">You were kicked by the Administrator</string>
    <string name="missing_id">Server coudln\'t provide an user ID</string>

    <!-- Adapter -->
    <string name="joined_the_room">joined the room:</string>
    <string name="created_the_room">created the room:</string>
    <string name="left_the_room">left the room:</string>

    <!-- App Bar -->
    <string name="server_app_bar_name">Server</string>
    <string name="client_app_bar_name">Client</string>
    <string name="chat_app_bar_name" translatable="false">Chat</string>
    <string name="home_app_bar_name" translatable="false">Chat App</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="share">Share</string>
    <string name="chat_members">Chat members</string>

    <!-- AlertDialog -->
    <string name="dialog_warning">If you leave this screen you\'ll be disconnected from the server, do you which to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TicTacToe -->
    <string name="retry">RETRY</string>
    <string name="draw">DRAW</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="accept_tictactoe_invite">Accept Invite?</string>
    <string name="tictactoe_invite">Invite to TicTacToe</string>
    <string name="cancel">Cancel</string>
    <string name="score">Score</string>

    <!-- Foreground -->
    <string name="close_server">Close Server</string>
    <string name="server_running">Server is running</string>
    <string name="server_on_ip" translatable="false">IP: %s:%s</string>

    <!-- HelperText -->
    <string name="optional">*Optional</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="save">Save</string>

    <!-- View Error -->
    <string name="audio_missing">Error receiving the audio</string>
</resources>