<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="30dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:cardCornerRadius="250dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_goat"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <ImageView
            android:id="@+id/btnTakePhoto"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_take_picture"/>

        <ImageView
            android:id="@+id/btnChoosePicture"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_photo"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:hint="@string/username_hint">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/save"
        android:visibility="visible" />

</LinearLayout>